--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -53,6 +53,65 @@ body {
     .container {
       grid-template-rows: 6rem calc(100vh - 6rem); } }
 
+.heading-1, .heading-2, .heading-3, .heading-4, .paragraph {
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 400; }
+
+.heading-1 {
+  font-size: 4.5rem;
+  color: #f9f7f6;
+  line-height: 1; }
+
+.heading-2 {
+  font-size: 4rem;
+  font-style: italic;
+  line-height: 1; }
+  .heading-2--light {
+    color: #f9f7f6; }
+  .heading-2--dark {
+    color: #54483A; }
+
+.heading-3 {
+  font-size: 1.6rem;
+  color: #c69963;
+  text-transform: uppercase; }
+
+.heading-4 {
+  font-size: 1.9rem; }
+  .heading-4--light {
+    color: #f9f7f6; }
+  .heading-4--dark {
+    color: #54483A; }
+
+.paragraph {
+  font-size: 2rem;
+  color: #f9f7f6;
+  letter-spacing: 0.2rem; }
+
+.u-center-text {
+  text-align: center !important; }
+
+.u-margin-bottom-small {
+  margin-bottom: 1.5rem !important; }
+
+.u-margin-bottom-medium {
+  margin-bottom: 4rem !important; }
+  @media only screen and (max-width: 56.25em) {
+    .u-margin-bottom-medium {
+      margin-bottom: 3rem !important; } }
+
+.u-margin-bottom-big {
+  margin-bottom: 8rem !important; }
+  @media only screen and (max-width: 56.25em) {
+    .u-margin-bottom-big {
+      margin-bottom: 5rem !important; } }
+
+.u-margin-top-big {
+  margin-top: 8rem !important; }
+
+.u-margin-top-huge {
+  margin-top: 10rem !important; }
+
 .footer {
   background-color: #101d2c;
   grid-column: full-start / full-end;
@@ -77,7 +136,6 @@ body {
 .header {
   background-color: #54483A;
   grid-column: full-start / col-end 6;
-  background-image: linear-gradient(rgba(16, 29, 44, 0.93), rgba(16, 29, 44, 0.93)), url(../img/header.jpg);
   background-size: cover;
   background-position: center;
   padding: 8rem;
@@ -85,7 +143,7 @@ body {
   display: grid;
   grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
   grid-template-columns: minmax(min-content, max-content);
-  grid-row-gap: 1.5rem;
+  row-gap: 1.5rem;
   justify-content: center; }
   @media only screen and (max-width: 50em) {
     .header {
@@ -93,11 +151,33 @@ body {
   @media only screen and (max-width: 37.5em) {
     .header {
       padding: 5rem; } }
+  .header__contact-text {
+    display: grid;
+    grid-template-columns: 1fr max-content 1fr;
+    grid-column-gap: 1.5rem;
+    align-items: center;
+    margin-top: 12rem;
+    font-size: 1.6rem;
+    color: #aaa; }
+    .header__contact-text::before, .header__contact-text::after {
+      content: "";
+      height: 1px;
+      display: block;
+      background-color: currentColor; }
+  .header__contact-links {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-column-gap: 3rem;
+    justify-items: center;
+    align-items: center; }
 
 .image_header {
   background-color: #101d2c;
   grid-column: col-start 7 / full-end;
   padding: 3rem; }
+  @media only screen and (max-width: 50em) {
+    .image_header {
+      grid-column: 1 / -1; } }
   .image_header img {
     width: 100%;
     height: 100%;
