--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -35,12 +35,15 @@ $color-grey-dark-2: #6D5D4B;
 // FONT
 $default-font-size: 1.6rem;
 
-
 // GRID
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-vertical-small: 6rem;
 $gutter-horizontal: 6rem;
+
+// FONT VARIABLES
+$font-primary: 'Nunito', sans-serif;
+$font-display: 'Josefin Sans', sans-serif;
 
 // RESPONSIVE BREAKPOINTS
 $bp-largest: 75em;   // 1200px
