--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -11,7 +11,6 @@
 .header {
     background-color: $color-grey-dark-1;
     grid-column: full-start / col-end 6;
-    background-image: linear-gradient(rgba($color-secondary, .93), rgba($color-secondary, .93)), url(../img/header.jpg);
     background-size: cover;
     background-position: center;
     padding: 8rem;
@@ -20,7 +19,7 @@
     display: grid;
     grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
     grid-template-columns: minmax(min-content, max-content);
-    grid-row-gap: 1.5rem;
+    row-gap: 1.5rem;
     justify-content: center;
 
     @media only screen and (max-width: $bp-medium) {
@@ -30,12 +29,43 @@
     @media only screen and (max-width: $bp-small) {
         padding: 5rem;
     }
+
+    &__contact-text {
+        display: grid;
+        grid-template-columns: 1fr max-content 1fr;
+        grid-column-gap: 1.5rem;
+        align-items: center;
+        margin-top: 12rem;
+
+        font-size: 1.6rem;
+        color: $color-grey-light-2;
+
+        &::before,
+        &::after {
+            content: "";
+            height: 1px;
+            display: block;
+            background-color: currentColor;
+        }
+    }
+
+    &__contact-links{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-column-gap: 3rem;
+        justify-items: center;
+        align-items: center;
+    }
 }
 
 .image_header{
     background-color: $color-secondary;
     grid-column: col-start 7 / full-end;
     padding: 3rem;
+
+    @media only screen and (max-width: $bp-medium) {
+        grid-column: 1 / -1;
+    }
 
     & img{
         width: 100%;
