--- a/sass/layout/_experiences.scss
+++ b/sass/layout/_experiences.scss
@@ -2,3 +2,126 @@
     grid-column: full-start / full-end;
     background-color: $color-grey-dark-1;
 }
+
+/* The actual timeline (the vertical ruler) */
+.timeline {
+    position: relative;
+    margin: 0 auto;
+
+    /* The actual timeline (the vertical ruler) */
+    &::after {
+        content: '';
+        position: absolute;
+        width: .6rem;
+        background-color: white;
+        top: 0;
+        bottom: 0;
+        left: 50%;
+        margin-left: -.3rem;
+
+        @media screen and (max-width: 600px) {
+            left: 3.1rem;
+        }
+    }
+
+    &__content {
+        padding: 2rem 3rem;
+        background-color: white;
+        position: relative;
+        border-radius: .6rem;
+    }
+
+    /* Container around content */
+    &__container {
+        padding: 1rem 4rem;
+        position: relative;
+        background-color: inherit;
+        width: 50%;
+
+        @media screen and (max-width: 600px) {
+            width: 100%;
+            padding-left: 7rem;
+            padding-right: 2.5rem;
+        }
+
+        /* The circles on the timeline */
+        &::after {
+            content: '';
+            position: absolute;
+            width: 2.5rem;
+            height: 2.5rem;
+            right: -1.3rem;
+            background-color: white;
+            border: .4rem solid #FF9F55;
+            top: 1.5rem;
+            border-radius: 50%;
+            z-index: 1;
+        }
+    }
+
+    /* Place the container to the left */
+    &__left {
+        left: 0;
+        /* Add arrows to the left container (pointing right) */
+        &::before {
+            content: " ";
+            height: 0;
+            position: absolute;
+            top: 2.2rem;
+            width: 0;
+            z-index: 1;
+            right: 3rem;
+            border: medium solid white;
+            border-width: 1rem 0 1rem 1rem;
+            border-color: transparent transparent transparent white;
+            /* Make sure that all arrows are pointing leftwards */
+            @media screen and (max-width: 600px) {
+                left: 6rem;
+                border: medium solid white;
+                border-width: 1rem 1rem 1rem 0;
+                border-color: transparent white transparent transparent;
+            }
+        }
+
+        &::after {
+            @media screen and (max-width: 600px) {
+                left: 1.8rem;
+            }
+        }
+    }
+
+    /* Place the container to the right */
+    &__right {
+        left: 50%;
+
+        @media screen and (max-width: 600px) {
+            left: 0%;
+        }
+        /* Add arrows to the right container (pointing left) */
+        &::before {
+            content: " ";
+            height: 0;
+            position: absolute;
+            top: 2.2rem;
+            width: 0;
+            z-index: 1;
+            left: 3rem;
+            border: medium solid white;
+            border-width: 1rem 1rem 1rem 0;
+            border-color: transparent white transparent transparent;
+
+            @media screen and (max-width: 600px) {
+                left: 6rem;
+            }
+        }
+
+         /* Fix the circle for containers on the right side */
+        &::after {
+            left: -1.2rem;
+            @media screen and (max-width: 600px) {
+                left: 1.8rem;
+            }
+        }
+    }
+
+}
