--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -53,7 +53,7 @@ body {
     .container {
       grid-template-rows: 6rem calc(100vh - 6rem); } }
 
-.heading-1, .heading-2, .heading-3, .heading-4, .paragraph {
+.heading-1, .heading-2, .heading-3, .heading-4, .paragraph, .description {
   font-family: "Josefin Sans", sans-serif;
   font-weight: 400; }
 
@@ -88,6 +88,12 @@ body {
   font-weight: 300i;
   color: #f9f7f6;
   letter-spacing: 0.2rem; }
+
+.description {
+  font-size: 2rem;
+  font-weight: 300i;
+  color: #6D5D4B;
+  margin: 1rem 0; }
 
 .u-center-text {
   text-align: center !important; }
