--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -664,6 +664,46 @@ dt {
   width: 100%;
   grid-column: full-start / full-end;
   background-color: #f9f7f6; }
+  .web_projects__container {
+    margin: 4rem 15rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 4rem;
+    row-gap: 4rem; }
+    .web_projects__container__item {
+      width: 100%;
+      overflow: hidden;
+      position: relative;
+      overflow: hidden; }
+      .web_projects__container__item img {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        object-fit: cover; }
+      .web_projects__container__item__caption {
+        position: absolute;
+        top: 40%;
+        left: 40%;
+        transform: translate(-50%, 20%);
+        color: #fff;
+        font-size: 1.7rem;
+        opacity: 0;
+        transition: all .5s;
+        backface-visibility: hidden; }
+        .web_projects__container__item__caption h3::before {
+          content: '';
+          width: 100%;
+          border-bottom: solid 1px #fff;
+          position: absolute;
+          left: 0;
+          top: 20%;
+          z-index: 1; }
+      .web_projects__container__item:hover .web_projects__container__item__caption {
+        opacity: 1;
+        transform: translate(-50%, -50%); }
+      .web_projects__container__item:hover .web_projects__container__item__img {
+        transform: scale(1);
+        filter: blur(3px) brightness(40%); }
 
 .gallery {
   background-color: #f9f7f6;
