--- a/sass/layout/_web_projects.scss
+++ b/sass/layout/_web_projects.scss
@@ -2,4 +2,60 @@
     width: 100%;
     grid-column: full-start / full-end;
     background-color: $color-grey-light-1;
+    
+    &__container{
+        margin: 4rem 15rem;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 4rem;
+        row-gap: 4rem;
+
+        &__item {
+            width: 100%;
+            overflow: hidden;
+            position: relative;
+            overflow: hidden;
+
+            & img{
+                width: 100%;
+                height: 100%;
+                overflow: hidden;
+                object-fit: cover;
+            }
+
+            &__caption {
+                position: absolute;
+                top: 40%;
+                left: 40%;
+                transform: translate(-50%, 20%);
+                color: $color-white;
+                font-size: 1.7rem;
+                opacity: 0;
+                transition: all .5s;
+                backface-visibility: hidden;
+
+                & h3::before{
+                    content: '';
+                    width: 100%;
+                    border-bottom: solid 1px #fff;
+                    position: absolute;
+                    left: 0;
+                    top: 20%;
+                    z-index: 1;
+
+                }
+              }
+            
+              &:hover &__caption {
+                  opacity: 1;
+                  transform: translate(-50%, -50%);
+              }
+            
+              &:hover &__img {
+                  transform: scale(1);
+                  filter: blur(3px) brightness(40%);
+              }
+
+        }
+    }
 }
