--- a/sass/layout/_web_projects.scss
+++ b/sass/layout/_web_projects.scss
@@ -10,6 +10,19 @@
         column-gap: 4rem;
         row-gap: 4rem;
 
+        @include respond(tab-land) {
+            grid-template-columns: repeat(1, 1fr);
+            margin: 4rem 10rem;
+        }
+
+        @include respond(tab-port) {
+            margin: 3rem 5rem;
+        }
+
+        @include respond(phone) {
+            margin: 3rem 1rem;
+        }
+
         &__item {
             width: 100%;
             overflow: hidden;
